[gd_scene load_steps=9 format=4 uid="uid://cxdw43yvcb4h"]

[ext_resource type="TileSet" uid="uid://c0fh2yuw37u4s" path="res://Environment/tileset.tres" id="1_6vbam"]
[ext_resource type="PackedScene" uid="uid://cf2nbw1l4orcf" path="res://Player/player.tscn" id="1_fd0be"]
[ext_resource type="Script" uid="uid://c0800crywoa4f" path="res://Levels/TwoLoop/FlipSwitch/flip_switch.gd" id="1_vgsxg"]
[ext_resource type="PackedScene" uid="uid://binoy2bpne3jf" path="res://Objects/Door/Door.tscn" id="3_a6jjt"]
[ext_resource type="PackedScene" uid="uid://dfhxr5g4l6gg" path="res://Objects/Platforms/slide_platform.tscn" id="3_liv2v"]
[ext_resource type="PackedScene" uid="uid://cc4n2fr13d1eh" path="res://Objects/DudDoor/DudDoor.tscn" id="4_bfes5"]
[ext_resource type="PackedScene" uid="uid://d2ed68h0eog6" path="res://Objects/Lever/lever.tscn" id="5_ga1d6"]
[ext_resource type="PackedScene" uid="uid://bjhkesuabemhh" path="res://Objects/Button/button.tscn" id="7_h7jwe"]

[node name="FlipSwitch" type="Node2D"]
script = ExtResource("1_vgsxg")

[node name="Door" parent="." instance=ExtResource("3_a6jjt")]
position = Vector2(47, 48)

[node name="DudDoor" parent="." instance=ExtResource("4_bfes5")]
position = Vector2(41, 336)

[node name="Lever" parent="." instance=ExtResource("5_ga1d6")]
position = Vector2(85, 368)

[node name="Button" parent="." instance=ExtResource("7_h7jwe")]
position = Vector2(465, 288)

[node name="Button2" parent="." instance=ExtResource("7_h7jwe")]
position = Vector2(235, 288)

[node name="SlidePlatform1" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(200, 344)
rotation = 1.5708
scale = Vector2(0.75, 0.75)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform1" index="0"]
position = Vector2(200, 271)

[node name="SlidePlatform2" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(275, 271)
rotation = 1.5708
scale = Vector2(0.75, 0.75)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform2" index="0"]
position = Vector2(275, 344)

[node name="SlidePlatform3" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(350, 344)
rotation = 1.5708
scale = Vector2(0.75, 0.75)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform3" index="0"]
position = Vector2(350, 271)

[node name="SlidePlatform4" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(425, 271)
rotation = 1.5708
scale = Vector2(0.75, 0.75)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform4" index="0"]
position = Vector2(425, 344)

[node name="SlidePlatform5" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(88, 264)
rotation = 1.5708
scale = Vector2(0.75, 0.667)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform5" index="0"]
position = Vector2(88, 216)

[node name="SlidePlatform6" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(504, 186)
scale = Vector2(0.75, 0.5)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform6" index="0"]
position = Vector2(456, 186)

[node name="SlidePlatform7" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(210, 208)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform7" index="0"]
position = Vector2(210, 144)

[node name="SlidePlatform8" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(260, 144)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform8" index="0"]
position = Vector2(260, 208)

[node name="SlidePlatform9" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(310, 208)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform9" index="0"]
position = Vector2(310, 144)

[node name="SlidePlatform10" parent="." instance=ExtResource("3_liv2v")]
position = Vector2(360, 144)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
speed = 0.09

[node name="Endpoint" parent="SlidePlatform10" index="0"]
position = Vector2(360, 208)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAQAAgACAAEAAAAAAAUAAgACAAMAAAAAAAYAAgABAAEAAAAAAAcAAgABAAEAAAAAAAgAAgABAAEAAAAAAAkAAgABAAEAAAAAAAoAAgABAAEAAAAAAAsAAgAAAAMAAAAAAAwAAgACAAEAAAAAAA0AAgACAAEAAAAAAA4AAgACAAEAAAAAAA8AAgACAAEAAAAAABAAAgACAAMAAAAAABEAAgABAAEAAAAAABIAAgABAAEAAAAAABMAAgAAAAMAAAAjAAQAAgAAAAEAAAAjAAUAAgAAAAEAAAAjAAYAAgAAAAEAAAAjAAcAAgAAAAEAAAAjAAgAAgAAAAEAAAAjAAkAAgAAAAEAAAAjAAoAAgAAAAEAAAAjAAsAAgAAAAEAAAAjAAwAAgAAAAQAAAAjAA0AAgABAAEAAAAjAA4AAgABAAEAAAAjAA8AAgABAAMAAAAjABAAAgAAAAEAAAAjABEAAgAAAAEAAAAjABIAAgAAAAEAAAAjABMAAgAAAAEAAAAAABQAAgACAAEAAAAAABUAAgACAAEAAAAAABYAAgACAAEAAAAAABcAAgACAAMAAAABABcAAgABAAAAAAACABcAAgABAAAAAAADABcAAgABAAAAAAAEABcAAgABAAAAAAAFABcAAgABAAAAAAAGABcAAgABAAAAAAAHABcAAgABAAAAAAAIABcAAgABAAAAAAAJABcAAgABAAAAAAAKABcAAgABAAAAAAALABcAAgABAAAAAAAMABcAAgABAAAAAAANABcAAgABAAAAAAAOABcAAgABAAAAAAAPABcAAgABAAAAAAAQABcAAgABAAAAAAARABcAAgABAAAAAAASABcAAgABAAAAAAATABcAAgABAAAAAAAUABcAAgABAAAAAAAVABcAAgABAAAAAAAWABcAAgABAAAAAAAXABcAAgABAAAAAAAYABcAAgABAAAAAAAZABcAAgABAAAAAAAaABcAAgABAAAAAAAbABcAAgABAAAAAAAcABcAAgABAAAAAAAdABcAAgABAAAAAAAeABcAAgABAAAAAAAfABcAAgABAAAAAAAgABcAAgABAAAAAAAhABUAAgAAAAAAAAAhABYAAgAAAAEAAAAhABcAAgAAAAQAAAAiABUAAgABAAAAAAAiABYAAgABAAEAAAAiABcAAgABAAEAAAAjABQAAgAAAAEAAAAjABUAAgAAAAQAAAAjABYAAgABAAEAAAAjABcAAgABAAEAAAAAAAMAAgACAAEAAAAAAAIAAgACAAEAAAAAAAEAAgACAAEAAAAAAAAAAgAAAAMAAAABAAAAAgABAAIAAAACAAAAAgABAAIAAAADAAAAAgABAAIAAAAEAAAAAgABAAIAAAAFAAAAAgABAAIAAAAGAAAAAgABAAIAAAAHAAAAAgABAAIAAAAIAAAAAgABAAIAAAAJAAAAAgABAAIAAAAKAAAAAgABAAIAAAALAAAAAgABAAIAAAAMAAAAAgABAAIAAAANAAAAAgABAAIAAAAOAAAAAgABAAIAAAAPAAAAAgABAAIAAAAQAAAAAgABAAIAAAARAAAAAgABAAIAAAASAAAAAgABAAIAAAATAAAAAgABAAIAAAAUAAAAAgABAAIAAAAVAAAAAgABAAIAAAAWAAAAAgABAAIAAAAXAAAAAgABAAIAAAAYAAAAAgABAAIAAAAZAAAAAgABAAIAAAAaAAAAAgABAAIAAAAbAAAAAgABAAIAAAAcAAAAAgABAAIAAAAdAAAAAgABAAIAAAAeAAAAAgABAAIAAAAfAAAAAgABAAIAAAAgAAAAAgABAAIAAAAhAAAAAgABAAIAAAAiAAAAAgABAAIAAAAjAAAAAgABAAMAAAAjAAEAAgAAAAEAAAAjAAIAAgAAAAEAAAAjAAMAAgAAAAEAAAABAAUAAgABAAAAAAACAAUAAgABAAAAAAADAAUAAgABAAAAAAAEAAUAAgACAAAAAAAEAAYAAgACAAEAAAAEAAcAAgACAAEAAAAEAAgAAgACAAEAAAAEAAkAAgACAAEAAAADAAYAAgABAAEAAAADAAcAAgABAAEAAAADAAgAAgABAAEAAAADAAkAAgABAAEAAAACAAkAAgABAAEAAAACAAgAAgABAAEAAAACAAcAAgABAAEAAAACAAYAAgABAAEAAAABAAYAAgABAAEAAAABAAcAAgABAAEAAAABAAgAAgABAAEAAAABAAkAAgABAAEAAAABAAoAAgABAAEAAAABAAsAAgABAAIAAAABABAAAgABAAAAAAABABEAAgABAAEAAAABABIAAgABAAEAAAACAAoAAgABAAEAAAACAAsAAgABAAIAAAACABAAAgACAAAAAAACABEAAgACAAEAAAACABIAAgACAAMAAAADAAoAAgABAAEAAAADAAsAAgABAAIAAAAEAAoAAgACAAMAAAAEAAsAAgABAAIAAAAFAAoAAgABAAAAAAAFAAsAAgABAAIAAAAFABIAAgABAAAAAAAFABMAAgABAAIAAAAGAAoAAgABAAAAAAAGAAsAAgABAAIAAAAGAA4AAgAAAAAAAAAGAA8AAgAAAAIAAAAGABIAAgABAAAAAAAGABMAAgABAAIAAAAHAAoAAgABAAAAAAAHAAsAAgABAAIAAAAHAA4AAgABAAAAAAAHAA8AAgABAAIAAAAHABIAAgABAAAAAAAHABMAAgABAAIAAAAIAAoAAgABAAAAAAAIAAsAAgABAAIAAAAIAA4AAgABAAAAAAAIAA8AAgABAAIAAAAIABIAAgABAAAAAAAIABMAAgABAAIAAAAJAAoAAgABAAAAAAAJAAsAAgABAAIAAAAJAA4AAgABAAAAAAAJAA8AAgABAAIAAAAJABIAAgABAAAAAAAJABMAAgABAAIAAAAKAAoAAgABAAAAAAAKAAsAAgABAAIAAAAKAA4AAgABAAAAAAAKAA8AAgABAAIAAAAKABIAAgABAAAAAAAKABMAAgABAAIAAAALAAoAAgABAAAAAAALAAsAAgABAAIAAAALAA4AAgABAAAAAAALAA8AAgABAAIAAAALABIAAgABAAAAAAALABMAAgABAAIAAAAMAAoAAgABAAAAAAAMAAsAAgABAAIAAAAMAA4AAgABAAAAAAAMAA8AAgABAAIAAAAMABIAAgABAAAAAAAMABMAAgABAAIAAAANAAoAAgABAAAAAAANAAsAAgABAAIAAAANAA4AAgABAAAAAAANAA8AAgABAAIAAAANABIAAgABAAAAAAANABMAAgABAAIAAAAOAAoAAgABAAAAAAAOAAsAAgABAAIAAAAOAA4AAgABAAAAAAAOAA8AAgABAAIAAAAOABIAAgABAAAAAAAOABMAAgABAAIAAAAPAAoAAgABAAAAAAAPAAsAAgABAAIAAAAPAA4AAgABAAAAAAAPAA8AAgABAAIAAAAPABIAAgABAAAAAAAPABMAAgABAAIAAAAQAAoAAgABAAAAAAAQAAsAAgABAAIAAAAQAA4AAgABAAAAAAAQAA8AAgABAAIAAAAQABIAAgABAAAAAAAQABMAAgABAAIAAAARAAoAAgABAAAAAAARAAsAAgABAAIAAAARAA4AAgABAAAAAAARAA8AAgABAAIAAAARABIAAgABAAAAAAARABMAAgABAAIAAAASAAoAAgABAAAAAAASAAsAAgABAAIAAAASAA4AAgABAAAAAAASAA8AAgABAAIAAAASABIAAgABAAAAAAASABMAAgABAAIAAAATAAoAAgABAAAAAAATAAsAAgABAAIAAAATAA4AAgABAAAAAAATAA8AAgABAAIAAAATABIAAgABAAAAAAATABMAAgABAAIAAAAUAAoAAgABAAAAAAAUAAsAAgABAAIAAAAUAA4AAgABAAAAAAAUAA8AAgABAAIAAAAUABIAAgABAAAAAAAUABMAAgABAAIAAAAVAAoAAgABAAAAAAAVAAsAAgABAAIAAAAVAA4AAgABAAAAAAAVAA8AAgABAAIAAAAVABIAAgABAAAAAAAVABMAAgABAAIAAAAWAAoAAgABAAAAAAAWAAsAAgABAAIAAAAWAA4AAgABAAAAAAAWAA8AAgABAAIAAAAWABIAAgABAAAAAAAWABMAAgABAAIAAAAXAAoAAgABAAAAAAAXAAsAAgABAAIAAAAXAA4AAgABAAAAAAAXAA8AAgABAAIAAAAXABIAAgABAAAAAAAXABMAAgABAAIAAAAYAAoAAgABAAAAAAAYAAsAAgABAAIAAAAYAA4AAgABAAAAAAAYAA8AAgABAAIAAAAYABIAAgABAAAAAAAYABMAAgABAAIAAAAZAAoAAgABAAAAAAAZAAsAAgABAAIAAAAZAA4AAgABAAAAAAAZAA8AAgABAAIAAAAZABIAAgABAAAAAAAZABMAAgABAAIAAAAaAAoAAgABAAAAAAAaAAsAAgABAAIAAAAaAA4AAgABAAAAAAAaAA8AAgABAAIAAAAaABIAAgABAAAAAAAaABMAAgABAAIAAAAbAAoAAgABAAAAAAAbAAsAAgABAAIAAAAbAA4AAgABAAAAAAAbAA8AAgABAAIAAAAbABIAAgABAAAAAAAbABMAAgABAAIAAAAcAAoAAgABAAAAAAAcAAsAAgABAAIAAAAcAA4AAgABAAAAAAAcAA8AAgABAAIAAAAcABIAAgABAAAAAAAcABMAAgABAAIAAAAdAAoAAgACAAAAAAAdAAsAAgACAAIAAAAdAA4AAgABAAAAAAAdAA8AAgABAAIAAAAdABIAAgACAAAAAAAdABMAAgACAAIAAAAeAA4AAgABAAAAAAAeAA8AAgABAAIAAAAfAA4AAgABAAAAAAAfAA8AAgABAAIAAAAgAA4AAgABAAAAAAAgAA8AAgABAAIAAAAhAAwAAgAAAAAAAAAhAA0AAgAAAAEAAAAhAA4AAgAAAAQAAAAhAA8AAgABAAIAAAAiAAwAAgABAAAAAAAiAA0AAgABAAEAAAAiAA4AAgABAAEAAAAiAA8AAgABAAIAAAAEABIAAgABAAAAAAADABIAAgABAAAAAAAEABMAAgABAAIAAAADABMAAgABAAIAAAACABMAAgABAAIAAAABABMAAgABAAIAAAA=")
tile_set = ExtResource("1_6vbam")

[node name="Player" parent="." instance=ExtResource("1_fd0be")]
position = Vector2(43, 368)

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2(2, 2)
limit_left = 0
limit_top = 0
limit_right = 576
limit_bottom = 384

[connection signal="switched" from="Lever" to="." method="_on_lever_switched"]
[connection signal="just_pressed" from="Button" to="." method="_on_button_just_pressed"]
[connection signal="just_unpressed" from="Button" to="." method="_on_button_just_unpressed"]
[connection signal="just_pressed" from="Button2" to="." method="_on_button_2_just_pressed"]
[connection signal="just_unpressed" from="Button2" to="." method="_on_button_2_just_unpressed"]

[editable path="SlidePlatform1"]
[editable path="SlidePlatform2"]
[editable path="SlidePlatform3"]
[editable path="SlidePlatform4"]
[editable path="SlidePlatform5"]
[editable path="SlidePlatform6"]
[editable path="SlidePlatform7"]
[editable path="SlidePlatform8"]
[editable path="SlidePlatform9"]
[editable path="SlidePlatform10"]
